--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -6,11 +6,11 @@ server:
 spring:
   datasource:
     password: root
-    url: jdbc:postgresql://localhost:5432/registration
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
