--- a/project/src/main/resources/application.yml
+++ b/project/src/main/resources/application.yml
@@ -19,19 +19,17 @@ spring:
       enabled: true
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: update #of create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
-
   mail:
     host: localhost
     port: 1025
     username: hello
     password: hello
-
     properties:
       mail:
         smtp:
