--- a/project/pom.xml
+++ b/project/pom.xml
@@ -107,7 +107,10 @@
 			<version>3.4.0</version>
 			<scope>compile</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+		</dependency>
 
 	</dependencies>
 
